[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/art/Player/PlayerSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://GlobalScripts/HurtBox.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=4]
bounce = 0.1

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 8.00006

[sub_resource type="Animation" id=2]
resource_name = "move_forward"
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:move_timing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, -5.0, -5.0, 100.0, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "turn"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 9, 10, 11, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:turn_timing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, -10.0, -10.0, 100.0, 0 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 32.0
height = 8.0

[node name="Player" type="RigidBody2D"]
z_index = 1
physics_material_override = SubResource( 4 )
gravity_scale = 0.0
contacts_reported = 5
contact_monitor = true
can_sleep = false
linear_damp = 5.0
angular_damp = 5.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="RigidBodyCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="BodySprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
hframes = 4
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/move_forward = SubResource( 2 )
anims/turn = SubResource( 3 )

[node name="AttackCD" type="Timer" parent="."]
wait_time = 0.1

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource( 5 )

[connection signal="timeout" from="AttackCD" to="." method="_on_AttackCooldown_timeout"]
